# crewaiagents

./: .gitignore
.github/workflows/: ci.yml
call_analytics/: Dockerfile  README.md  pyproject.toml
call_analytics/src/call_analytics/: api.py  crew.py  listeners.py  main.py
call_analytics/src/call_analytics/config/: agents.yaml  tasks.yaml
call_analytics/src/call_analytics/static/: index.html
call_analytics/src/call_analytics/tools/: __init__.py  insight_tool.py  sentiment_tool.py  transcribe_tool.py
call_analytics/tests/: test_happy_path.py
my_first_crew/: README.md  pyproject.toml  report.md
my_first_crew/src/my_first_crew/: crew.py  main.py
