[project]
name = "my_first_crew"
version = "0.1.0"
description = "my_first_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
my_first_crew = "my_first_crew.main:run"
run_crew = "my_first_crew.main:run"
train = "my_first_crew.main:train"
replay = "my_first_crew.main:replay"
test = "my_first_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
